Closes #2459: Fix Code Smells